--- a/examples/autocomplete/package.json
+++ b/examples/autocomplete/package.json
@@ -6,7 +6,8 @@
   "author": "",
   "dependencies": {
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react-select": "^1.2.1"
   },
   "devDependencies": {
     "browserify": "^16.1.0"
