--- a/examples/multi-async/Makefile
+++ b/examples/multi-async/Makefile
@@ -1,5 +1,5 @@
 all: 
 	purs compile src/*.purs '../../src/**/*.purs' '../../bower_components/purescript-*/src/**/*.purs'
-	purs bundle --module Autocomplete output/*/*.js > output/bundle.js
-	echo 'module.exports = PS.Autocomplete;' >> output/bundle.js
+	purs bundle --module MultiAsync output/*/*.js > output/bundle.js
+	echo 'module.exports = PS.MultiAsync;' >> output/bundle.js
 	node_modules/browserify/bin/cmd.js output/bundle.js index.js -o html/index.js
