--- a/bower.json
+++ b/bower.json
@@ -1,14 +1,8 @@
 {
-  "name": "purescript-react-basic-react-select",
-  "ignore": [
-    "**/.*",
-    "node_modules",
-    "bower_components",
-    "output"
-  ],
+  "name": "purescript-react-select-basic",
+  "ignore": ["**/.*", "node_modules", "bower_components", "output"],
   "dependencies": {
     "purescript-prelude": "^3.3.0",
-    "purescript-console": "^3.0.0",
     "purescript-react-basic": "^0.10.0",
     "purescript-nullable": "^3.0.0",
     "purescript-promises": "^2.0.0"
