--- a/examples/multi-async/package.json
+++ b/examples/multi-async/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "autocomplete",
+  "name": "react-select-basic-examples-multi-async",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
