--- a/bower.json
+++ b/bower.json
@@ -2,6 +2,10 @@
   "name": "purescript-react-select-basic",
   "ignore": ["**/.*", "node_modules", "bower_components", "output"],
   "license": "Apache-2.0",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lumihq/purescript-react-select-basic.git"
+  },
   "dependencies": {
     "purescript-prelude": "^3.3.0",
     "purescript-react-basic": "^0.10.0",
