--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "purescript-react-select-basic",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "description": "purescript-react-basic bindings for react-select",
   "main": "index.js",
   "scripts": {
@@ -12,7 +12,12 @@
     "type": "git",
     "url": "git+https://github.com/lumihq/purescript-react-select-basic.git"
   },
-  "keywords": ["react", "react-basic", "react-select", "purescript"],
+  "keywords": [
+    "react",
+    "react-basic",
+    "react-select",
+    "purescript"
+  ],
   "author": "",
   "license": "Apache-2.0",
   "bugs": {
