--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,17 @@
 language: node_js
 node_js: 8
+
+# local paths in PATH break `find -execdir`
+before_script:
+  - PATH=${PATH//:\.\/node_modules\/\.bin/}
+
 install:
   - npm install
+
 script:
   - npx bower install
   - npm -s test
+
 # after_success:
 # - >-
 #   test $TRAVIS_TAG &&
