--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,15 @@
+dist: trusty
+sudo: required
 language: node_js
-node_js: 8
+node_js: 10
+
 install:
   - npm install
+
 script:
   - npx bower install
   - npm -s test
+
 # after_success:
 # - >-
 #   test $TRAVIS_TAG &&
